--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,9 @@
-Pending
+0.0.3 - Pending
 	* Fix issue when no values are set in any subfield of a composite field.
 	* Add more segment tests.
 
-0.0.2
+0.0.2 - 2011-09-06
 	* Import all segments and loops from the X12 CSV Table Data
+
+0.0.1 - 2011-02-05
+	* Intial version.
